# pygame-new

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/pygame_new/: __init__.py  constants.py  game.py  game_objects.py
tests/: test_all.py
