[project]
name = "pygame-new"
version = "0.1.0"
description = "an example of a pygame repo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame-ce>=2.5.3",
    "pygbag>=0.9.2",
    "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
