[project]
name = "pygame-new"
version = "0.1.0"
description = "an example of a pygame repo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame-ce>=2.5.3",
]

[dependency-groups]
dev = [
    "pygbag>=0.9.2",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.ruff.lint]
select = [
    "ANN",  # Require return type annotations for public functions
]  


# This is required to use an editable installation of the `pygame-new` library,
# which is required to use pytest in this configuration.
#
# See <https://docs.pytest.org/en/stable/explanation/goodpractices.html>.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
